<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="facebook_app_id">226578928549339</string>
    <string name="fb_login_protocol_scheme">fb226578928549339</string>
    <string name="web_client_id">55249431206-oi7pa240hvq4jmgpok5836b77paj3quf</string>
    <string name="app_name">My Scope</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="first_name">First Name<font color='#ff0000'>*</font></string>
    <string name="firstName">Enter First Name</string>
    <string name="last_name">Last Name<font color='#ff0000'>*</font></string>
    <string name="lastName">Enter Last Name</string>
    <string name="doctorName">Enter Doctor Name</string>
    <string name="pharmacists_name">Pharmacists Name<font color='#ff0000'>*</font></string>
    <string name="pharmacistsName">Pharmacists Name</string>
    <string name="gender">Gender<font color='#ff0000'>*</font></string>
    <string name="dob">Date of birth<font color='#ff0000'>*</font></string>
    <string name="dOB">DD/MM/YYYY</string>
    <string name="age">Age</string>
    <string name="yrs">(Yrs)</string>
    <string name="weight">Weight <font color='#ff0000'>*</font></string>
    <string name="kgs">(Kg)</string>
    <string name="height">Height<font color='#ff0000'>*</font></string>
    <string name="height_et">feet.inches </string>
    <string name="bmi">BMI<font color='#ff0000'>*</font></string>
    <string name="bmi_attr"> (kg/m2)</string>
    <string name="blood_group">Blood group<font color='#ff0000'>*</font></string>
    <string name="language_known">Language known</string>
    <string name="education_level">Education level</string>
    <string name="marital_status">Marital Status</string>
    <string name="family_income">Family Income</string>
    <string name="nameerror">Name Required</string>
    <string name="medical_history">Disease History</string>
    <string name="known_condition">Known Condition <font color='#ff0000'>*</font></string>
    <string name="disease_statues">Disease Statues <font color='#ff0000'>*</font></string>
    <string name="disease_duration">Disease Duration <font color='#ff0000'>*</font></string>
    <string name="no_of_yrs"> No of yrs</string>
    <string name="when_started">When Started</string>
    <string name="started_date">Started Date</string>
    <string name="when_ended">When Ended</string>
    <string name="ended_date"> Ended Date</string>
    <string name="notes">Notes</string>
    <string name="save">SAVE</string>
    <string name="edit">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="send">SEND</string>
    <string name="disease">e.g Diabetes</string>
    <string name="family_history"> Family History</string>
    <string name="condition">Condition<font color='#ff0000'>*</font></string>
    <string name="diabetes"> e.g Diabetes</string>
    <string name="relationship">Relationship<font color='#ff0000'>*</font></string>
    <string name="social_history"> Social History</string>
    <string name="smoking">Smoking<font color='#ff0000'>*</font></string>
    <string name="total_yrs_of_smoking">Total yrs of smoking</string>
    <string name="drinking">Alcohol intake <font color='#ff0000'>*</font></string>
    <string name="total_yrs_of_drinking">Total yrs of drinking</string>
    <string name="tobacco_usage">Tobacco usage<font color='#ff0000'>*</font></string>
    <string name="diet_title">Diet</string>
    <string name="diet">Diet<font color='#ff0000'>*</font></string>
    <string name="diet_notes">Special Diet Notes</string>
    <string name="allergy">Allergy</string>
    <string name="add_allergy">Add Allergy<font color='#ff0000'>*</font></string>
    <string name="name">Name<font color='#ff0000'>*</font></string>
    <string name="eg_allergy">Aspirin,sea food,dust</string>
    <string name="reaction">Reaction</string>
    <string name="eg_reaction">sneezing,itching</string>
    <string name="treatment">Treatment</string>
    <string name="eg_treatment">Anti Allergic drugs</string>
    <string name="first_observed">First observed</string>
    <string name="calender">Calender</string>
    <string name="immunization_history">Immunization History</string>
    <string name="hepatitis_b">Hepatitis B</string>
    <string name="immun_name">Name<font color='#ff0000'>*</font></string>
    <string name="when_given">When given</string>
    <string name="adverse_event">Adverse event</string>
    <string name="brand">Brand</string>
    <string name="medication_history">Medication History</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="eg_dose_strength">E.g. 500</string>
    <string name="reason">Reason</string>
    <string name="surgery_history">Surgery History</string>
    <string name="eg_Surgery">E.g. Endoscopy</string>
    <string name="surg_name">Name<font color='#ff0000'>*</font></string>
    <string name="when_performed">When performed</string>
    <string name="body_location">Body Location</string>
    <string name="eg_body_location">E.g. Stomach</string>
    <string name="provider">Provider</string>
    <string name="eg_provider">E.g. Doctor Name</string>
    <string name="drug_title">Adverse Drug Reaction</string>
    <string name="drug_Name">Drug Name<font color='#ff0000'>*</font></string>
    <string name="blood_glucose"> Blood Glucose </string>
    <string name="date">Date  <font color='#ff0000'>*</font></string>
    <string name="test">Test  <font color='#ff0000'>*</font> </string>
    <string name="date_of_test">(dd/mm/yyyy) </string>
    <string name="test_result">Test Result <font color='#ff0000'>*</font></string>
    <string name="test_units">(mg/dl)</string>
    <string name="title_termsconditions">Scope Medics®</string>
    <string name="subtitle_termsconditions">Terms and Conditions</string>
    <string name="paragraph_one">MySCOPE is an internet based utility setup by Soarg Technologies Ltd for the individuals to create and manage their health information.</string>
    <string name="paragraph_two">Please read these Terms and Condition carefully. By clicking \"I agree\" to these Terms of Agreement, you are indicating that you have read, and you agree to be bound by, these Terms of Agreement.</string>
    <string name="heading_one">INFORMATION WE COLLECT/HOW WE USE YOUR INFORMATION:</string>
    <string name="paragraph_three">In order to register you as a user of MySCOPE, we collect certain personal information, Health Information or Contact information from you at the time of registration. We will use your information to register, manage and run your account. No one else can have an access to your health records without your permission. Your entered information/health records at MySCOPE are absolutely safe and secure.</string>
    <string name="heading_two">TO WHOM THIS INFORMATION IS DISCLOSED:</string>
    <string name="paragraph_four"><![CDATA[When you become a user of MySCOPE, you are allowed to enter your personal information or the personal information of family members in your Personal Health Record (PHR). Information is stored on secured web servers. Only Friends & Family, Health Care Provider, third parties working on our behalf have access to this information if you specifically authorize access to them.]]></string>
    <string name="heading_three">LIMITATION ON USE:</string>
    <string name="paragraph_five">This website is used solely for user’s personal use .Unauthorized use of this website, including but not limited to, unauthorized entry into systems, misuse of passwords, or misuse of any other information is strictly prohibited. Health Care Providers cannot modify, copy, paste, and distribute the information sent by user except that you may view the shared information in its present form for opinion/advice. The content which is for informational purposes is not meant for emergencies.</string>
    <string name="heading_four">POLICY WITH REGARD TO YOUR CONTENT:</string>
    <string name="paragraph_six"><![CDATA[You are the only one who controls the data contained in your account and your health information would remain stored in MySCOPE for 2 years, from the date of upload and further extension will be based on subscription bases. Your information will not be sold to outside vendors and will be used only for the purpose you intend. As such, you may add, update, delete or change the information in those records at any time. Your family & friends, Health Care Provider can view your health records stored at MySCOPE only if you provide an access to  them. You can also fix the duration for which your family & friends, Health Care Provider can view your health records.]]></string>
    <string name="paragraph_seven">Free Storage space of 1GB data for 2 year for active Users. For Inactive user who had not login or used MySCOPE App for a period of 1 year the stored data/upload Files/Images will not be available post inactivation. Only personal Information will remain</string>
    <string name="heading_five">USER RESPONSIBILITY:</string>
    <string name="sub_heading_one">You must:</string>
    <string name="list_one">· Ensure your details (personal….etc) are accurate.</string>
    <string name="list_two"> · Agree that you are responsible for maintaining the confidentiality and security of username and passwords associated with your account. You are responsible for any consequences arising from or relating to the sharing of, or your accidental disclosure of, your user username or password to access your account.</string>
    <string name="list_three"> · Please do not self-medicate and In case of emergency you should consult your physician or other qualified health care provider.</string>
    <string name="list_four"> · You may choose to disclose information through website to a family member, friend, health care provider, researcher, marketer, or other person or entity. You should consider such a disclosure carefully before allowing it. Once you disclose or grant access to your information to any third party, these Terms of Agreement and Privacy Statement will not apply to the third party\'s uses and disclosures of your information.</string>
    <string name="list_five"> · Report the Support team immediately if you suspect that the security of your account may have been compromised.</string>
    <string name="list_six"> · To create an individual personal account into MySCOPE, you must be 18 years of age or older.</string>
    <string name="list_seven"> · Seek explicit consent from dependent, family members etc. before creating his/her profile.</string>
    <string name="heading_six">THIRD PARTY CONTENT:</string>
    <string name="paragraph_eight">This website contains information which is provided by third parties. It does not warrant the accuracy or reliability of any information provided by a third party for display on this website.</string>
    <string name="heading_seven">HEALTH INFORMATION:</string>
    <string name="paragraph_nine">All health-related information (Health Tips) contained within website is intended to be general in nature and should not be used as a substitute for medical treatment by a health care professional.</string>
    <string name="heading_eight">IMPORTANT INFORMATION ABOUT SPECIFIC SERVICES:</string>
    <string name="paragraph_ten">MySCOPE enables you to store your health related information in one place. It can help you keep track of this information in a convenient way and more easily share it with your health care providers. The accuracy, integrity and completeness of the health information you enter? Or that  you allow others such as your doctor to enter for opinion? Into your \"Record Database\" is your responsibility and we assume no liability for it. We also are not liable for any use or misuse of information transmitted or received by a third party you have authorized to access.</string>
</resources>