<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <!--    <include layout="@layout/app_bar_main" />-->

    <include layout="@layout/background_image" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="center"
                android:text="@string/title_termsconditions"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="center"
                android:text="@string/subtitle_termsconditions"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_one"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_two"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/heading_one"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_three"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_two"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_four"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_three"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_five"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_four"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_six"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_seven"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_five"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:textStyle="bold"
                android:text="@string/sub_heading_one"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_one"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_two"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_three"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_four"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_five"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_six"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/list_seven"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_six"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_eight"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_seven"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_nine"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:lines="1"
                android:text="@string/heading_eight"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_marginRight="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:gravity="start"
                android:text="@string/paragraph_ten"
                android:textColor="@color/bg_screen2"
                android:textSize="@dimen/dimen_16" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_10"
                android:background="@drawable/background_button"
                android:backgroundTint="#1F78D3"
                android:text="Ok" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

