<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:anroid="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/app_bar_main" />
    <include layout="@layout/background_image" />



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/blood_glucose"
        android:textColor="@color/bg_screen2"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textColor="@color/bg_screen2"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/date_of_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_of_test"
            android:background="@drawable/border_bg"
            android:padding="@dimen/dimen_4"
            android:inputType="date"
            android:textColor="@color/bg_screen2"
            android:textColorHint="@color/bg_screen2"
            android:textSize="16sp" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test"
            android:textColor="@color/bg_screen2"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_glucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:popupBackground="@color/colorWhite"
            android:background="@drawable/edittext_border"
            android:padding="@dimen/dimen_4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/test_result"
            android:textColor="@color/bg_screen2"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/test_result_glucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/test_units"
            android:background="@drawable/border_bg"
            android:padding="@dimen/dimen_4"
            android:inputType="number"
            android:textColor="@color/bg_screen2"
            android:textColorHint="@color/bg_screen2"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2">
<!--        -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/notes"
            android:textColor="@color/bg_screen2"
            android:textSize="16dp" />
        <EditText
            android:id="@+id/notes_blood_glucose"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_75"
            android:layout_weight="1"
            android:background="@drawable/border_bg"
            android:inputType="textMultiLine"
            android:gravity="start"
            android:padding="@dimen/dimen_4"
            android:textColor="@color/bg_screen2"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_blood_glucose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/background_button"
        android:backgroundTint="#1F78D3"
        android:layout_marginTop="@dimen/dimen_10"
        android:layout_marginLeft="@dimen/dimen_10"
        android:layout_marginRight="@dimen/dimen_10"
        android:text="@string/save"
        android:textSize="16sp" />

</LinearLayout>
