<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    tools:context=".activities.medical_history.Diet">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/app_bar_main" />
    <include layout="@layout/background_image"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diet_title"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/bg_screen2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/diet"
                android:textColor="@color/bg_screen2"
                android:textSize="16sp" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_bg"
                android:layout_height="wrap_content">
            <Spinner
                android:id="@+id/spinner_diet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="2dp"
                android:entries="@array/smoking_arrays"/>
            </FrameLayout>

        </LinearLayout>
        <Button
            android:id="@+id/btn_diet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            android:textColor="@color/colorWhite"
            android:background="@drawable/background_button"
            android:backgroundTint="#1F78D3"
            android:textSize="16sp"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_10"/>
    </LinearLayout>
</ScrollView>